--- a/index.html
+++ b/index.html
@@ -1,28 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Utterly Labs</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Utterly Labs</h1>
-				<p>Where strange and wonderful things happen.<a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:utterlylabs@gmail.com">email</a></li>
-        		<li><a href="https://github.com/utterly">github.com/utterly</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Home ! Utterly Labs
+---
+<div class="blurb">
+        <h1>Utterly Labs</h1>
+	<p>Where strange and wonderful things happen.</p>
+</div><!-- /.blurb -->
