--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Home ! Utterly Labs
+title: Home ! utterly labs
 ---
 <div class="blurb">
-        <h1>Utterly Labs</h1>
+        <h1>utterly labs</h1>
 	<p>Where strange and wonderful things happen.</p>
 </div><!-- /.blurb -->
